<?xml version="1.0" encoding="UTF-8" ?>

<!--
  ~ Copyright (c) 2020-2026 Pavel Vasin
  ~
  ~ Licensed under the Jelurida Public License version 1.1
  ~ for the Blacknet Public Blockchain Platform (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ See the LICENSE.txt file at the top-level directory of this distribution.
  -->

<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>ninja.blacknet</groupId>
    <artifactId>blacknet</artifactId>
    <version>0.3-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>benchmarks</module>
        <module>cli</module>
        <module>io</module>
        <module>daemon</module>
        <module>json-rpc</module>
        <module>kernel</module>
        <module>runtime</module>
        <module>serialization</module>
        <module>time</module>
    </modules>

    <licenses>
        <license>
            <name>Jelurida Public License version 1.1 for the Blacknet Public Blockchain Platform</name>
            <url>https://gitlab.com/blacknet-ninja/blacknet/-/raw/master/LICENSE.txt</url>
        </license>
    </licenses>

    <organization>
        <name>Blacknet Team</name>
        <url>https://blacknet.ninja/</url>
    </organization>

    <issueManagement>
        <system>GitLab</system>
        <url>https://gitlab.com/blacknet-ninja/blacknet/-/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitLab</system>
        <url>https://gitlab.com/blacknet-ninja/blacknet/-/pipelines</url>
    </ciManagement>

    <scm>
        <connection>scm:git:git://git@gitlab.com:blacknet-ninja/blacknet.git</connection>
        <developerConnection>scm:git:https://gitlab.com/blacknet-ninja/blacknet.git</developerConnection>
        <url>https://gitlab.com/blacknet-ninja/blacknet</url>
    </scm>

    <properties>
        <java.version>21</java.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.4.0</maven-resources-plugin.version>
        <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>
        <appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
        <maven-artifact-plugin.version>3.6.1</maven-artifact-plugin.version>
        <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
        <cyclonedx-maven-plugin.version>2.9.1</cyclonedx-maven-plugin.version>

        <kotlin.version>2.2.21</kotlin.version>
        <coroutines.version>1.10.2</coroutines.version>
        <serialization.version>1.10.0</serialization.version>
        <ktor.version>3.3.3</ktor.version>
        <atomicfu.version>0.30.0</atomicfu.version>
        <eddsa.version>0.3.0</eddsa.version>
        <blake2b.version>2.0.0</blake2b.version>
        <bouncycastle.version>1.83</bouncycastle.version>
        <leveldb-java.version>0.12</leveldb-java.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logging.version>7.0.13</logging.version>
        <guava.version>33.5.0-jre</guava.version>
        <weupnp.version>0.1.4</weupnp.version>
        <jmh.version>1.37</jmh.version>

        <project.build.outputTimestamp>2024-01-01T00:00:00Z</project.build.outputTimestamp>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <!--UPSTREAM https://youtrack.jetbrains.com/issue/KT-61667/Maven-Xjdk-release20-leads-to-Xjdk-release20-option-conflicts-with-jvm-target-1.8.-Please-remove-the-jvm-target-option -->
        <kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>kotlinx-coroutines-core-jvm</artifactId>
                <version>${coroutines.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>kotlinx-coroutines-debug</artifactId>
                <version>${coroutines.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>kotlinx-serialization-core-jvm</artifactId>
                <version>${serialization.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>kotlinx-serialization-json-jvm</artifactId>
                <version>${serialization.version}</version>
            </dependency>
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-server-cio-jvm</artifactId>
                <version>${ktor.version}</version>
            </dependency>
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-server-default-headers-jvm</artifactId>
                <version>${ktor.version}</version>
            </dependency>
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-server-status-pages-jvm</artifactId>
                <version>${ktor.version}</version>
            </dependency>
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-server-websockets-jvm</artifactId>
                <version>${ktor.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlinx</groupId>
                <artifactId>atomicfu-jvm</artifactId>
                <version>${atomicfu.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.i2p.crypto</groupId>
                <artifactId>eddsa</artifactId>
                <version>${eddsa.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rfksystems</groupId>
                <artifactId>blake2b</artifactId>
                <version>${blake2b.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.iq80.leveldb</groupId>
                <artifactId>leveldb</artifactId>
                <version>${leveldb-java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.oshai</groupId>
                <artifactId>kotlin-logging-jvm</artifactId>
                <version>${logging.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bitlet</groupId>
                <artifactId>weupnp</artifactId>
                <version>${weupnp.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-test-testng</artifactId>
                <version>${kotlin.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${jmh.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${jmh.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                            </sourceDirs>
                            <args>
                                <!--UPSTREAM java.lang.IllegalStateException: Could not load module definition from
                                <arg>-Xjdk-release=${java.version}</arg>
                                -->
                                <arg>-jvm-default=no-compatibility</arg>
                            </args>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultEntries>false</addDefaultEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>appassembler-maven-plugin</artifactId>
                    <version>${appassembler-maven-plugin.version}</version>
                    <configuration>
                        <extraJvmArguments>--enable-native-access=ALL-UNNAMED</extraJvmArguments>
                        <repositoryLayout>flat</repositoryLayout>
                        <repositoryName>lib</repositoryName>
                    </configuration>
                    <executions>
                        <execution>
                            <id>assemble</id>
                            <goals>
                                <goal>assemble</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-artifact-plugin</artifactId>
                    <version>${maven-artifact-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>${versions-maven-plugin.version}</version>
                    <configuration>
                        <ignoredVersions>(?i).*(alpha|beta|rc).*</ignoredVersions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.cyclonedx</groupId>
                    <artifactId>cyclonedx-maven-plugin</artifactId>
                    <version>${cyclonedx-maven-plugin.version}</version>
                    <configuration>
                        <includeTestScope>true</includeTestScope>
                        <outputFormat>json</outputFormat>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
